Added some static html

--- a/resources/public/about.html
+++ b/resources/public/about.html
@@ -39,9 +39,9 @@
           </div>
           <div class="navbar-collapse collapse" id="navbar">
             <ul class="nav navbar-nav">
-              <li><a href="/about" class="navbar-ganja-links">About</a></li>
+              <li class="active"><a href="/about" class="navbar-ganja-links">About</a></li>
               <li><a href="/rules" class="navbar-ganja-links">Rules/Regulations</a></li>
-              <li><a href="/misc" class="navbar-ganja-links">Member Projects</a></li>
+              <li><a href="/misc" class="navbar-ganja-links">Member Projects</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
@@ -49,15 +49,12 @@
 
       <div class="content">
         <div class="page-content">
-          <h1>News</h1>
+          <h1>About Us</h1>
           <div class="news-content">
-            <p>Hola Ganja-nites, welcome to the official clan home page!</p>
-            <p>Right now the site is in the process of being built and thus is pretty rudimentary and likely</p>
-            <p>to change at any time.  However, the it should be fairly stable, so don't shy away from visiting.</p>
-            <p>Also, if you find any bugs, or maybe just have a good idea for some content/features feel free </p>
-            <p>to <a href="mailto:john.cooper.bell@gmail.com">message me.</a></p>
-            </br><p>Cooper</p>
-            <p>July 12, 2015</p>
+            <p>We’re a very friendly family clan that is fortunate to have a loyal core of members.</p>
+            <p>We’re very laid back, and ask those who opt in to war to take it very seriously.</p>
+            <p>We love ganja, but it is not a requirement for membership.</p>
+            <p>We’re all chill here.</p>
           </div>
         </div>
       </div>
