--- a/resources/public/misc.html
+++ b/resources/public/misc.html
@@ -41,7 +41,7 @@
             <ul class="nav navbar-nav">
               <li><a href="/about" class="navbar-ganja-links">About</a></li>
               <li><a href="/rules" class="navbar-ganja-links">Rules/Regulations</a></li>
-              <li><a href="/misc" class="navbar-ganja-links">Member Projects</a></li>
+              <li><a href="/misc" class="navbar-ganja-links">Member Projects</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
@@ -49,26 +49,27 @@
 
       <div class="content">
         <div class="page-content">
-          <h1>News</h1>
-          <div class="news-content">
-            <p>Hola Ganja-nites, welcome to the official clan home page!</p>
-            <p>Right now the site is in the process of being built and thus is pretty rudimentary and likely</p>
-            <p>to change at any time.  However, the it should be fairly stable, so don't shy away from visiting.</p>
-            <p>Also, if you find any bugs, or maybe just have a good idea for some content/features feel free </p>
-            <p>to <a href="mailto:john.cooper.bell@gmail.com">message me.</a></p>
-            </br><p>Cooper</p>
-            <p>July 12, 2015</p>
-          </div>
+          <h1>Member Projects</h1>
+            <h3>Clash Caller Mobile</h3>
+            <div class="news-content">
+              <p>Cooper Bell – Our brother Deathgrindfreak created a <a href="https://play.google.com/store/apps/details?id=io.deathgrindfreak.clashcaller">clash caller app</a> for android devices. A special thanks to Deathgrindfreak!</p>
+            </div>
+            <h3>Stone Bride</h3>
+            <div class="news-content">
+              <p>Listen to Elder Deamon Cleaner’s band Stone Bride at: <a href="http://stonebride.bandcamp.com">http://stonebride.bandcamp.com</a>
+            </div>
+            <h3>Guy Nuesca</h3>
+            <div class="news-content">
+              <p>Go look at Sergeant of Arms, Osideris’s Artwork at: <a href="http://blackhive.com">http://blackhive.com</a></p>
+            </div>
         </div>
       </div>
-
       <footer>
         <div class="container">
           <p>Site by <a href="https://github.com/deathgrindfreak">Cooper Bell</a>, art by <a href="">Chris Cobb</a></p>
           <p>Licensed under the <a href="http://opensource.org/licenses/Artistic-2.0">Artistic License</a> version 2.0.</p>
         </div>
       </footer>
-      
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
