--- a/resources/public/misc.html
+++ b/resources/public/misc.html
@@ -23,7 +23,7 @@
   <body>
     <div class="container">
 
-      <img width="1140px" src="img/banner.jpg"/>
+      <img class="banner" src="img/banner.jpg"/>
       
       <!-- Static navbar -->
       <nav class="navbar navbar-default navbar-ganja">
