--- a/resources/public/rules.html
+++ b/resources/public/rules.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/ganja.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -52,7 +52,7 @@
           <h1>Clan Rules</h1>
           <h3>Joining</h3>
           <div class="news-content">
-            <p>Joining the Ganja Jedi requires a minimum of TH8 and Level 5 Archers for membership. Leaders, co-leaders, and elders can elect to accept lower members based on loyalty and participation. Farming is encouraged, so trophy level is not strictly enforced. Focus is on player development, clan participation, and maturity.</p>
+            <p>Joining the Ganja Jedi requires a minimum of TH8, 200 war trophies and Level 5 Archers for membership. Leaders, co-leaders, and elders can elect to accept lower members based on loyalty and participation. Farming is encouraged, so trophy level is not strictly enforced. Focus is on player development, clan participation, and maturity.</p>
             <p>Our donation ratio rule is 1:2. For every two troops you receive you donate one. Members that have been vouched for that are also TH6 or lower are exempted from the 1:2 ratio rule. We encourage our lower levels to be active, request often, and level quickly.  This allows higher level TH’s more opportunities to maintain their ratio while preventing them from receiving lower level troops.</p>
 <p>War is not mandatory. But to opt in you must meet all the requirements and agree to ALL of the War Rules. 
 You MUST be a Non Rushed TH7+ to participate in war. New members must opt out of the first war after joining the clan to witness how war is conducted. This prevents confusion during war and establishes credibility. We detest hoppers. 
