--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -26,6 +26,11 @@
       
       <!-- Static navbar -->
       <nav class="navbar navbar-default navbar-ganja">
+        <div class="navbar-login navbar-header pull-right">
+          <ul class="nav navbar-nav pull-right">
+            <li><a href="/login" class="navbar-ganja-links">Login</a></li>
+          </ul>
+        </div>
         <div class="container-fluid">
           <div class="navbar-header">
             <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
@@ -34,13 +39,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">Home</a>
           </div>
           <div class="navbar-collapse collapse" id="navbar">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-left">
+              <li><a href="/" class="navbar-ganja-links">Home</a></li>
               <li><a href="/about" class="navbar-ganja-links">About</a></li>
               <li><a href="/rules" class="navbar-ganja-links">Rules/Regulations</a></li>
-              <li><a href="/misc" class="navbar-ganja-links">Member Projects</a></li>
+              <li><a href="/misc" class="navbar-ganja-links">Member Projects</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
