--- a/resources/public/header.html
+++ b/resources/public/header.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title></title>
+    <title>Ganja Jedi: Unite!</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/ganja.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -27,6 +26,20 @@
       
       <!-- Static navbar -->
       <nav class="navbar navbar-default navbar-ganja">
+        <div class="navbar-login navbar-header pull-right">
+          <ul class="nav navbar-nav pull-right">
+            <li><a class="login-dropdown-toggle" href="#">Login<span class="caret"></span></a>
+              <div class="login-dropdown">
+                <ul class="login-list">
+                  <li><input type="text" name="login-name" class="login-input" placeholder="Village Name"/></li>
+                  <li><input type="password" name="login-password" class="login-input" placeholder="Password"/></li>
+                  <li><button type="button" class="btn">Login</button></li>
+                  <li id="forgot-pass">Forgot your <a href="#">password</a>?</li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
         <div class="container-fluid">
           <div class="navbar-header">
             <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
@@ -35,13 +48,18 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">Home</a>
           </div>
           <div class="navbar-collapse collapse" id="navbar">
-            <ul class="nav navbar-nav">
-              <li><a href="/about" class="navbar-ganja-links">About</a></li>
-              <li><a href="/rules" class="navbar-ganja-links">Rules/Regulations</a></li>
-              <li><a href="/misc" class="navbar-ganja-links">Member Projects</a></li>
+            <ul class="nav navbar-nav navbar-left">
+              <li><a href="/" class="navbar-ganja-links">Home</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Clan Info<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/about" class="navbar-ganja-links">About</a></li>
+                  <li><a href="/rules" class="navbar-ganja-links">Rules/Regulations</a></li>
+                  <li><a href="/misc" class="navbar-ganja-links">Member Projects</a></li>
+                </ul>
+              </li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
