--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -28,11 +28,14 @@
       <nav class="navbar navbar-default navbar-ganja">
         <div class="navbar-login navbar-header pull-right">
           <ul class="nav navbar-nav pull-right">
-            <li><a href="#" class="login-dropdown-toggle">Login</a>
+            <li><a class="login-dropdown-toggle" href="#">Login<span class="caret"></span></a>
               <div class="login-dropdown">
-                <input type="text" name="login-name" class="login-input" placeholder="Village Name"/>
-                <input type="password" name="login-password" class="login-input" placeholder="Password"/>
-                <button>Login</button>
+                <ul class="login-list">
+                  <li><input type="text" name="login-name" class="login-input" placeholder="Village Name"/></li>
+                  <li><input type="password" name="login-password" class="login-input" placeholder="Password"/></li>
+                  <li><button type="button" class="btn">Login</button></li>
+                  <li id="forgot-pass">Forgot your <a href="#">password</a>?</li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -89,5 +92,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/ganja.js"></script>
   </body>
 </html>
