--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,66 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Ganja Jedi: Unite!</title>
-
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/ganja.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+  <head></head>
   <body>
     <div class="container">
 
       <img class="banner" src="img/banner.jpg"/>
       
-      <!-- Static navbar -->
-      <nav class="navbar navbar-default navbar-ganja">
-        <div class="navbar-login navbar-header pull-right">
-          <ul class="nav navbar-nav pull-right">
-            <li><a href="#" class="login-dropdown-toggle">Login</a>
-              <div class="login-dropdown">
-                <input type="text" name="login-name" class="login-input" placeholder="Village Name"/>
-                <input type="password" name="login-password" class="login-input" placeholder="Password"/>
-                <button>Login</button>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div class="navbar-collapse collapse" id="navbar">
-            <ul class="nav navbar-nav navbar-left">
-              <li><a href="/" class="navbar-ganja-links">Home</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Clan Info<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="/about" class="navbar-ganja-links">About</a></li>
-                  <li><a href="/rules" class="navbar-ganja-links">Rules/Regulations</a></li>
-                  <li><a href="/misc" class="navbar-ganja-links">Member Projects</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
+      <div id="navbar-root"></div>
 
       <div class="content">
         <div class="page-content">
@@ -77,12 +23,7 @@
         </div>
       </div>
 
-      <footer>
-        <div class="container">
-          <p>Site by <a href="https://github.com/deathgrindfreak">Cooper Bell</a>, art by <a href="">Chris Cobb</a></p>
-          <p>Licensed under the <a href="http://opensource.org/licenses/Artistic-2.0">Artistic License</a> version 2.0.</p>
-        </div>
-      </footer>
+      <footer></footer>
       
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
