Styled login dropdown

--- a/resources/public/rules.html
+++ b/resources/public/rules.html
@@ -87,5 +87,6 @@ We welcome suggestions because we constantly seek ways in which to improve.</p>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/ganja.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   </body>
 </html>
