--- a/resources/public/register.html
+++ b/resources/public/register.html
@@ -33,7 +33,7 @@
                   </div>
                   <div class="register-field register-field-textbox">
                     <label for="admin-message">A message to our overlords.</label>
-                    <input type="textarea" name="admin-message" class="registration-textbox" placeholder="Message..."/>
+                    <textarea name="admin-message" class="registration-textbox" placeholder="Message..."></textarea>
                   </div>
                   <div class="register-button">
                     <button type="button" class="btn">Register</button>
