Fix Procfile, fix table creation

--- a/resources/public/about.html
+++ b/resources/public/about.html
@@ -10,12 +10,14 @@
 
       <div class="content">
         <div class="page-content">
-          <h1>About Us</h1>
-          <div class="news-content">
-            <p>We’re a very friendly family clan that is fortunate to have a loyal core of members.</p>
-            <p>We’re very laid back, and ask those who opt in to war to take it very seriously.</p>
-            <p>We love ganja, but it is not a requirement for membership.</p>
-            <p>We’re all chill here.</p>
+          <div class="news-section">
+            <h1>About Us</h1>
+            <div class="news-content">
+              <p>We’re a very friendly family clan that is fortunate to have a loyal core of members.</p>
+              <p>We’re very laid back, and ask those who opt in to war to take it very seriously.</p>
+              <p>We love ganja, but it is not a requirement for membership.</p>
+              <p>We’re all chill here.</p>
+            </div>
           </div>
         </div>
       </div>
