--- a/resources/public/rules.html
+++ b/resources/public/rules.html
@@ -11,69 +11,83 @@
       <div class="content">
         <div class="page-content">
           <h1>Clan Rules</h1>
-          <h3>Joining</h3>
-          <div class="news-content">
-            <p>Joining the Ganja Jedi requires a minimum of TH8, 200+ war stars and Level 5 Archers for membership. Leaders, co-leaders, and elders can elect to accept lower members based on loyalty and participation. Farming is encouraged, so trophy level is not strictly enforced. Focus is on player development, clan participation, and maturity.</p>
-            <p>Our donation ratio rule is 1:2. For every two troops you receive you donate one. Members that have been vouched for that are also TH6 or lower are exempted from the 1:2 ratio rule. We encourage our lower levels to be active, request often, and level quickly.  This allows higher level TH’s more opportunities to maintain their ratio while preventing them from receiving lower level troops.</p>
-<p>War is not mandatory. But to opt in you must meet all the requirements and agree to ALL of the War Rules. 
-You MUST be a Non Rushed TH7+ to participate in war. New members must opt out of the first war after joining the clan to witness how war is conducted. This prevents confusion during war and establishes credibility. We detest hoppers. 
-Breaking any of the rules can and most likely will result in being demoted or booted from the clan. 
-We welcome suggestions because we constantly seek ways in which to improve.</p>
+          <div class="news-section">
+            <h3>Joining</h3>
+            <div class="news-content">
+              <p>Joining the Ganja Jedi requires a minimum of TH8, 200+ war stars and Level 5 Archers for membership. Leaders, co-leaders, and elders can elect to accept lower members based on loyalty and participation. Farming is encouraged, so trophy level is not strictly enforced. Focus is on player development, clan participation, and maturity.</p>
+              <p>Our donation ratio rule is 1:2. For every two troops you receive you donate one. Members that have been vouched for that are also TH6 or lower are exempted from the 1:2 ratio rule. We encourage our lower levels to be active, request often, and level quickly.  This allows higher level TH’s more opportunities to maintain their ratio while preventing them from receiving lower level troops.</p>
+              <p>War is not mandatory. But to opt in you must meet all the requirements and agree to ALL of the War Rules. 
+                You MUST be a Non Rushed TH7+ to participate in war. New members must opt out of the first war after joining the clan to witness how war is conducted. This prevents confusion during war and establishes credibility. We detest hoppers. 
+                Breaking any of the rules can and most likely will result in being demoted or booted from the clan. 
+                We welcome suggestions because we constantly seek ways in which to improve.</p>
+            </div>
           </div>
-          <h3>War Rules</h3>
-          <div class="news-content">
-            <p>We war regularly twice a week and are temporarily offering the opportunity for a 3rd war (see 3rd War for further details). Tuesdays and Fridays are regular prep days. Wars on Wednesdays and Saturdays. War search starts at 12 noon central time. 
-	          <b>USE BOTH ATTACKS! THIS IS MANDATORY IF YOU OPT IN FOR WAR.</b></p>
-	        <p>Use Clashcaller.com</p>
-	        <p>A new clashcaller.com/war/unique ID will be sent out each prep day. Go to the site to claim the opponent you wish to face in war. Claimed targets will be respected for the first 12 hours of war.  Stealing a claimed target/attack will result in you being booted.</p>
-	        <p>You must use one attack before claiming another. It is possible to attack twice within the first 12 hours.</p>
-	        <p>The 2nd half of war is considered clean up. No claimed targets will be honored. Every base is available to be attacked. You are expected to attack for the easiest/max amount of new stars to ensure victory during clean up.</p>
-	        <p>Do not claim too low/high of targets. Common sense is required.</p>
-	        <p>You MUST take the best troops and spells you can make for war. No raiding troops. Opt out if you can’t/won’t take spells. We go all out.</p>
-	        <p><b>NO</b> attacking for loot.</p>
-	        <p><b>NO</b> Town Hall sniping.</p>
-	        <p>Fix your <b>WAR BASE</b>.  You may be kicked if your TH is outside of your walls.</p>
-	        <p>Have a strategy & request specific troops. Plan your attack out thoroughly and request specific clan castle troops that will compliment your army.</p>
-          <p>3rd War – A 3rd war per week is being temporarily offered to the first 15 whom sign up. This is in order to provide more practice to those who want it and to help the clan gain clan levels faster. Sign up is required as to not inconvenience those who do not want to be involved. Prep day on Sunday. War on Monday. War search starts at 12 noon central time. 3rd War works as follows: 
-	Saturdays at 12 noon central time: A mass message will be sent out in the clan mail with a new clashcaller.com/war/unique ID. The first 15 who sign up will be opted into War. Attempting to erase and/or steal someone’s already claimed spot on the signup sheet will result in you being booted.</p>
-	        <p>Sundays/Prep Days: As soon as the war from Saturday ends we will begin the war search. Another clashcaller.com/war/unique ID will be sent out on this day with the information where the first 15 who signed up can claim their targets for war. 
-	By signing up for the 3rd War you agreeing to follow ALL of the War Rules.  </p>
+          <div class="news-section">
+            <h3>War Rules</h3>
+            <div class="news-content">
+              <p>We war regularly twice a week and are temporarily offering the opportunity for a 3rd war (see 3rd War for further details). Tuesdays and Fridays are regular prep days. Wars on Wednesdays and Saturdays. War search starts at 12 noon central time. 
+	              <b>USE BOTH ATTACKS! THIS IS MANDATORY IF YOU OPT IN FOR WAR.</b></p>
+	            <p>Use Clashcaller.com</p>
+	            <p>A new clashcaller.com/war/unique ID will be sent out each prep day. Go to the site to claim the opponent you wish to face in war. Claimed targets will be respected for the first 12 hours of war.  Stealing a claimed target/attack will result in you being booted.</p>
+	            <p>You must use one attack before claiming another. It is possible to attack twice within the first 12 hours.</p>
+	            <p>The 2nd half of war is considered clean up. No claimed targets will be honored. Every base is available to be attacked. You are expected to attack for the easiest/max amount of new stars to ensure victory during clean up.</p>
+	            <p>Do not claim too low/high of targets. Common sense is required.</p>
+	            <p>You MUST take the best troops and spells you can make for war. No raiding troops. Opt out if you can’t/won’t take spells. We go all out.</p>
+	            <p><b>NO</b> attacking for loot.</p>
+	            <p><b>NO</b> Town Hall sniping.</p>
+	            <p>Fix your <b>WAR BASE</b>.  You may be kicked if your TH is outside of your walls.</p>
+	            <p>Have a strategy & request specific troops. Plan your attack out thoroughly and request specific clan castle troops that will compliment your army.</p>
+              <p>3rd War – A 3rd war per week is being temporarily offered to the first 15 whom sign up. This is in order to provide more practice to those who want it and to help the clan gain clan levels faster. Sign up is required as to not inconvenience those who do not want to be involved. Prep day on Sunday. War on Monday. War search starts at 12 noon central time. 3rd War works as follows: 
+	              Saturdays at 12 noon central time: A mass message will be sent out in the clan mail with a new clashcaller.com/war/unique ID. The first 15 who sign up will be opted into War. Attempting to erase and/or steal someone’s already claimed spot on the signup sheet will result in you being booted.</p>
+	            <p>Sundays/Prep Days: As soon as the war from Saturday ends we will begin the war search. Another clashcaller.com/war/unique ID will be sent out on this day with the information where the first 15 who signed up can claim their targets for war. 
+	              By signing up for the 3rd War you agreeing to follow ALL of the War Rules.  </p>
+            </div>
           </div>
-          <h3>Etiquette</h3>
-          <div class="news-content">
-	          <p>Treat everyone as your equal.  Nobody in the clan deserves more or less respect than yourself. You will be booted if you are disrespectful, bigoted, racist, or harassing against any of our members. We encourage a healthy and mature environment where players respect our global membership across continent, country, age, religion, race, and language. Period.</p>
-	          <p>Chat!  Part of the fun is knowing your clan members. We consist of all ages, spanning around the globe’s time zones.</p>
-	          <p>Keep it light. Don’t insult or harass members. Sometimes humor – especially a dry wit – doesn’t always communicate over chat. If other members don’t get the joke, back off, apologize, and carry on. If things get heated, log off and take a break.</p>
-	          <p>Agree to disagree. We have a diversity of religion, politics, and nationalities. Expect your colleagues to have different perspectives and opinions.</p>
-	          <p>No drama! We encourage a mature dialog. Members are expected to back off from hot topics instead of escalating. Encourage and respect each other.</p>
-	          <p>Participation in wars is optional. We’re a chill clan and want you to have fun/war whenever you want. Just make sure you’re opted out if you do not wish to fight or if there is even a slight chance you couldn’t attack twice in war. </p>
-	          <p>Read the Clan email. The clan email often contains important updates. Don’t miss out!</p>
-	          <p>Listen to the Co-Leaders! Use the clan leadership to resolve differences without drama.</p>
-	          <p>Be courteous. Remember to say thank you when necessary.</p>
+          <div class="news-section">
+            <h3>Etiquette</h3>
+            <div class="news-content">
+	            <p>Treat everyone as your equal.  Nobody in the clan deserves more or less respect than yourself. You will be booted if you are disrespectful, bigoted, racist, or harassing against any of our members. We encourage a healthy and mature environment where players respect our global membership across continent, country, age, religion, race, and language. Period.</p>
+	            <p>Chat!  Part of the fun is knowing your clan members. We consist of all ages, spanning around the globe’s time zones.</p>
+	            <p>Keep it light. Don’t insult or harass members. Sometimes humor – especially a dry wit – doesn’t always communicate over chat. If other members don’t get the joke, back off, apologize, and carry on. If things get heated, log off and take a break.</p>
+	            <p>Agree to disagree. We have a diversity of religion, politics, and nationalities. Expect your colleagues to have different perspectives and opinions.</p>
+	            <p>No drama! We encourage a mature dialog. Members are expected to back off from hot topics instead of escalating. Encourage and respect each other.</p>
+	            <p>Participation in wars is optional. We’re a chill clan and want you to have fun/war whenever you want. Just make sure you’re opted out if you do not wish to fight or if there is even a slight chance you couldn’t attack twice in war. </p>
+	            <p>Read the Clan email. The clan email often contains important updates. Don’t miss out!</p>
+	            <p>Listen to the Co-Leaders! Use the clan leadership to resolve differences without drama.</p>
+	            <p>Be courteous. Remember to say thank you when necessary.</p>
+            </div>
           </div>
-          <h3>Troop Donations (Peacetime)</h3>
-          <div class="news-content">
-	          <p>Try to use a lot of troops for raids and defense. Give opportunity for everyone to donate!</p>
-	          <p>Ask for reasonable troops that everyone has: Giants, Archers, Barbarians, Wizards, Healers, Balloons, Minions.</p>
-	          <p>Don’t ask for specific troops, like “lv.5 Wizards”. Just ask for “Wizards”. Give everyone a chance to donate.</p>
-	          <p>You can ask for expensive Dark Troops (i.e. Hog Riders) a few times, just for experience. If you ask too many times, don’t expect your request to be met.</p>
-	          <p><b>FILL REQUESTS ACCURATELY.</b> If someone asks for a Dragon, don’t give archers! If the person gets tired of waiting, they may change their request to something else. Repeated offenses will result in demotion or expulsion from the clan.</p>
-	          <p>If you are not in war or need troops for non-war purposes please start your request with the words “Non-CW Troops”, so everyone will know. </p>
+          <div class="news-section">
+            <h3>Troop Donations (Peacetime)</h3>
+            <div class="news-content">
+	            <p>Try to use a lot of troops for raids and defense. Give opportunity for everyone to donate!</p>
+	            <p>Ask for reasonable troops that everyone has: Giants, Archers, Barbarians, Wizards, Healers, Balloons, Minions.</p>
+	            <p>Don’t ask for specific troops, like “lv.5 Wizards”. Just ask for “Wizards”. Give everyone a chance to donate.</p>
+	            <p>You can ask for expensive Dark Troops (i.e. Hog Riders) a few times, just for experience. If you ask too many times, don’t expect your request to be met.</p>
+	            <p><b>FILL REQUESTS ACCURATELY.</b> If someone asks for a Dragon, don’t give archers! If the person gets tired of waiting, they may change their request to something else. Repeated offenses will result in demotion or expulsion from the clan.</p>
+	            <p>If you are not in war or need troops for non-war purposes please start your request with the words “Non-CW Troops”, so everyone will know. </p>
+            </div>
           </div>
-          <h3>Troop Donations (War)</h3>
-          <div class="news-content">
-	          <p><b>DO NOT</b> put troops into War Clan Castles unless coordinated by the leader. War Castle donated troops don’t count toward your donation numbers on the clan member page. Don’t try to boost your donations numbers by loading people’s castles with crap.</p>
-	          <p>War Castle troops are only provided by the clan’s highest-level players to maximize chances.</p>
-	          <p>For war attacks, you’re allowed/expected to request specific troops (i.e. “Level 5 Wizard”). Take troops that will compliment your attack. Don’t ask for generic crap. Start your request with the words “War Troops” so everyone will know. Request the troops that fit your attack strategy.</p>
-	          <p>Fill “War Troop” requests accurately. If you don’t have the exact or higher troop being requested, don’t donate.</p>
+          <div class="news-section">
+            <h3>Troop Donations (War)</h3>
+            <div class="news-content">
+	            <p><b>DO NOT</b> put troops into War Clan Castles unless coordinated by the leader. War Castle donated troops don’t count toward your donation numbers on the clan member page. Don’t try to boost your donations numbers by loading people’s castles with crap.</p>
+	            <p>War Castle troops are only provided by the clan’s highest-level players to maximize chances.</p>
+	            <p>For war attacks, you’re allowed/expected to request specific troops (i.e. “Level 5 Wizard”). Take troops that will compliment your attack. Don’t ask for generic crap. Start your request with the words “War Troops” so everyone will know. Request the troops that fit your attack strategy.</p>
+	            <p>Fill “War Troop” requests accurately. If you don’t have the exact or higher troop being requested, don’t donate.</p>
+            </div>
           </div>
-          <h3>Elder Status</h3>
-          <div class="news-content">
-            <p>Elder actually means something here. It can only be earned through loyalty, donations, and participation. Elder status may be removed if you break any clan rules. Elder rank can be removed at any time if a superior rank has a reason. Elders are only allowed to kick members if permitted by a superior rank or they have a valid/justifiable reason. Those who have earned this title are trusted to always be fair and use their best judgment.  </p>
+          <div class="news-section">
+            <h3>Elder Status</h3>
+            <div class="news-content">
+              <p>Elder actually means something here. It can only be earned through loyalty, donations, and participation. Elder status may be removed if you break any clan rules. Elder rank can be removed at any time if a superior rank has a reason. Elders are only allowed to kick members if permitted by a superior rank or they have a valid/justifiable reason. Those who have earned this title are trusted to always be fair and use their best judgment.  </p>
+            </div>
           </div>
-          <h3>Co-Leader Status</h3>
-          <div class="news-content">
-            <p>We have a strong staff of mature and understanding leaders. Only upon exceptional circumstances will co-leader status change.  <b>DO NOT ASK FOR CO-LEADER</b>. This rule is <b>NON-NEGOTIABLE</b>.<p>
+          <div class="news-section">
+            <h3>Co-Leader Status</h3>
+            <div class="news-content">
+              <p>We have a strong staff of mature and understanding leaders. Only upon exceptional circumstances will co-leader status change.  <b>DO NOT ASK FOR CO-LEADER</b>. This rule is <b>NON-NEGOTIABLE</b>.<p>
+            </div>
           </div>
           </div>
         </div>
