--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,15 +10,17 @@
 
       <div class="content">
         <div class="page-content">
-          <h1>News</h1>
-          <div class="news-content">
-            <p>Hola Ganja-nites, welcome to the official clan home page!</p>
-            <p>Right now the site is in the process of being built and is thus pretty rudimentary and likely</p>
-            <p>to change at any time.  However, it should still be fairly stable, so don't shy away from visiting at any time.</p>
-            <p>Also, if you find any bugs, or maybe just have a good idea for some content/features feel free </p>
-            <p>to <a href="mailto:john.cooper.bell@gmail.com">message me.</a></p>
-            </br><p>Cooper</p>
-            <p>July 12, 2015</p>
+          <div class="news-section">
+            <h1>News</h1>
+            <div class="news-content">
+              <p>Hola Ganja-nites, welcome to the official clan home page!</p>
+              <p>Right now the site is in the process of being built and is thus pretty rudimentary and likely</p>
+              <p>to change at any time.  However, it should still be fairly stable, so don't shy away from visiting at any time.</p>
+              <p>Also, if you find any bugs, or maybe just have a good idea for some content/features feel free </p>
+              <p>to <a href="mailto:john.cooper.bell@gmail.com">message me.</a></p>
+              </br><p>Cooper</p>
+              <p>July 12, 2015</p>
+            </div>
           </div>
         </div>
       </div>
