--- a/resources/public/misc.html
+++ b/resources/public/misc.html
@@ -10,19 +10,25 @@
 
       <div class="content">
         <div class="page-content">
-          <h1>Member Projects</h1>
+          <div class="news-section">
+            <h1>Member Projects</h1>
             <h3>Clash Caller Mobile</h3>
             <div class="news-content">
               <p>Cooper Bell – Our brother Deathgrindfreak created a <a href="https://play.google.com/store/apps/details?id=io.deathgrindfreak.clashcaller">clash caller app</a> for android devices. A special thanks to Deathgrindfreak!</p>
             </div>
+          </div>
+          <div class="news-section">
             <h3>Stone Bride</h3>
             <div class="news-content">
               <p>Listen to Elder Deamon Cleaner’s band Stone Bride at: <a href="http://stonebride.bandcamp.com">http://stonebride.bandcamp.com</a>
             </div>
+          </div>
+          <div class="news-section">
             <h3>Guy Nuesca</h3>
             <div class="news-content">
               <p>Go look at Sergeant of Arms, Osideris’s Artwork at: <a href="http://blackhive.com">http://blackhive.com</a></p>
             </div>
+          </div>
         </div>
       </div>
       
