--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,6 +12,7 @@
         <div class="page-content">
           <div class="news-section">
             <h1>News</h1>
+            <h3>Welcome!</h3>
             <div class="news-content">
               <p>Hola Ganja-nites, welcome to the official clan home page!</p>
               <p>Right now the site is in the process of being built and is thus pretty rudimentary and likely</p>
