--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,8 +10,9 @@
 
       <div class="content">
         <div class="page-content">
+          <h1>News</h1>
+          <div id="news-box"></div>
           <div class="news-section">
-            <h1>News</h1>
             <h3>Welcome!</h3>
             <div class="news-content">
               <p>Hola Ganja-nites, welcome to the official clan home page!</p>
@@ -19,7 +20,7 @@
               <p>to change at any time.  However, it should still be fairly stable, so don't shy away from visiting at any time.</p>
               <p>Also, if you find any bugs, or maybe just have a good idea for some content/features feel free </p>
               <p>to <a href="mailto:john.cooper.bell@gmail.com">message me.</a></p>
-              </br><p>Cooper</p>
+              <br /><p>Cooper</p>
               <p>July 12, 2015</p>
             </div>
           </div>
@@ -32,8 +33,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/ganja.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <script src="js/build/bootstrap.min.js"></script>
+    <script src="js/build/ganja.js"></script>
   </body>
 </html>
