--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,7 +10,10 @@
 
       <div class="content">
         <div class="page-content">
-          <h1>News</h1>
+          <div class="news-header">
+            <a data-toggle="modal" data-target="#news-modal" class="edit-link">[new]</a>
+            <h1>News</h1>
+          </div>
           <div id="news-box"></div>
           <div class="news-section">
             <h3>Welcome!</h3>
