Added webpack, session login, etc ...

--- a/resources/public/about.html
+++ b/resources/public/about.html
@@ -6,17 +6,20 @@
 
       <img class="banner" src="img/banner.jpg"/>
       
-      <div id="navbar-root"></div>
+      <div class="nav-content-wrapper">
+        <div id="navbar-root"></div>
 
-      <div class="content">
-        <div class="page-content">
-          <div class="news-section">
-            <h1>About Us</h1>
-            <div class="news-content">
-              <p>We’re a very friendly family clan that is fortunate to have a loyal core of members.</p>
-              <p>We’re very laid back, and ask those who opt in to war to take it very seriously.</p>
-              <p>We love ganja, but it is not a requirement for membership.</p>
-              <p>We’re all chill here.</p>
+        <div class="content">
+          <div class="page-content">
+            <div class="news-section">
+              <h1>About Us</h1>
+              <div class="news-content">
+                <p>We’re a very friendly family clan that is fortunate to have a loyal core of members.</p>
+                <p>We’re very laid back, and ask those who opt in to war to take it very seriously.</p>
+                <p>We love ganja, but it is not a requirement for membership.</p>
+                <p>We’re all chill here.</p>
+              </div>
+              <div class="edit-box"></div>
             </div>
           </div>
         </div>
@@ -28,7 +31,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/build/bootstrap.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/build/ganja.js"></script>
   </body>
 </html>
