--- a/resources/public/register.html
+++ b/resources/public/register.html
@@ -6,50 +6,54 @@
 
       <img class="banner" src="img/banner.jpg"/>
       
-      <div id="navbar-root"></div>
+      <div class="nav-content-wrapper">
+        <div id="navbar-root"></div>
 
-      <div class="content">
-        <div class="page-content">
-          <h1>Register</h1>
-          <div class="news-content">
-            <div id="registration-header">
-              <p>Notice In order to register for the site, you must be a member of the Ganja Jedi clan.  Registration is thus not automatic and is strictly subject to the approval of our clan leaders.</p>
-              <p>This rule can of course be waved, but you'll probably need to know one of the members personally.  If this applies to you, please make sure you fill out the "A message to our overlords" portion of the form show below.</p>
-            </div>
-            <form name="registration-form" id="registration-form" action="" method="post">
-              <div class="registration">
-                <fieldset>
-                  <div class="input-group">
-                    <label for="status">Special Clan status <span class="warning">* Note that this is subject to admin approval.</span></label>
-                    <select name="status" class="form-control reg-drop">
-                      <option value="none">None</option>
-                      <option value="elder">Elder</option>
-                      <option value="coleader">Co-Leader</option>
-                      <option value="leader">Leader</option>
-                    </select>
-                  </div>
-                  <div class="input-group">
-                    <label for="email">Your email address</label>
-                    <input type="text" name="email" class="form-control reg-email" placeholder="Email Address" />
-                  </div>
-                  <div class="input-group">
-                    <label for="village">Your Clash of Clans village name.</label>
-                    <input type="text" name="village" class="form-control" placeholder="Village Name" />
-                  </div>
-                  <div class="input-group">
-                    <label for="pass">Your password.</label>
-                    <input type="password" name="pass" class="form-control" placeholder="Password" />
-                  </div>
-                  <div class="input-group">
-                    <label for="message">A message to our overlords.</label>
-                    <textarea name="message" rows="5" class="form-control reg-area" placeholder="Message..."></textarea>
-                  </div>
-                  <div class="register-button">
-                    <button type="submit" class="btn reg-button">Register</button>
-                  </div>
-                </fieldset>
+        <div class="content">
+          <div class="page-content">
+            <h1>Register</h1>
+            <div class="news-content">
+              <div id="registration-header">
+                <p>Notice In order to register for the site, you must be a member of the Ganja Jedi clan.  Registration is thus not automatic and is strictly subject to the approval of our clan leaders.</p>
+                <p>This rule can of course be waved, but you'll probably need to know one of the members personally.  If this applies to you, please make sure you fill out the "A message to our overlords" portion of the form show below.</p>
               </div>
-            </form>
+              <form name="registration-form" id="registration-form" action="" method="post">
+                <div class="registration">
+                  <fieldset>
+                    <div class="input-group">
+                      <label for="status">Special Clan status <span class="warning">* Note that this is subject to admin approval.</span></label>
+                      <select name="status" class="form-control reg-drop">
+                        <option value="none">None</option>
+                        <option value="elder">Elder</option>
+                        <option value="coleader">Co-Leader</option>
+                        <option value="leader">Leader</option>
+                      </select>
+                    </div>
+                    <div class="input-group">
+                      <label for="email">Your email address</label>
+                      <input type="text" name="email" class="form-control reg-email" placeholder="Email Address" />
+                    </div>
+                    <div class="input-group">
+                      <label for="village">Your Clash of Clans village name.</label>
+                      <input type="text" name="village" class="form-control" placeholder="Village Name" />
+                    </div>
+                    <div class="input-group">
+                      <label for="pass">Your password.</label>
+                      <input type="password" name="pass" class="form-control" placeholder="Password" />
+                    </div>
+                    <div class="input-group">
+                      <label for="message">A message to our overlords.</label>
+                      <textarea name="message" rows="5" class="form-control reg-area" placeholder="Message..."></textarea>
+                    </div>
+                    <div class="register-button">
+                      <div class="reg-button">
+                        <button type="submit" class="btn">Register</button>
+                      </div>
+                    </div>
+                  </fieldset>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -60,7 +64,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/build/bootstrap.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/build/ganja.js"></script>
   </body>
 </html>
